# flask-multiprocessing

./: Makefile  Procfile  README.md  app.py  config.py  forms.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py  views.py  wsgi.py
db/: database.sqlite
olx_app/: parser.py
olx_app/templates/: base.html
olx_app/templates/olx_app/: login.html
static/: script.js
templates/: base.html  login.html  olx.html
