[tool.poetry]
name = "flask-multiprocessing"
version = "0.1.0"
description = ""
authors = ["nyckolas <nyckolas.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
requests = "^2.28.1"
bs4 = "^0.0.1"
Flask-WTF = "^1.0.1"
SQLAlchemy = "^1.4.40"

[tool.poetry.dev-dependencies]
Flask-DebugToolbar = "^0.13.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
